# platform-devs

./: .frontzilla-pixelfera.db  .mcp-http.json  .mcp.json  ADR-001-PYTHON-POSTGRESQL-MIGRATION.md  ADR-002-REPO-AUTOMATION-GOVERNANCE.md  AGENTS.md  ANNOUNCEMENT.md  API_TEST_RESULTS.md  ARCHITECTURE_ANALYSIS_INDEX.md  ARCHITECTURE_HTTP_SERVICES.md  ARCHITECTURE_PROFILES_WORKFLOWS.md  AUDIT_REMEDIATION_COMPLETE.md  AUDIT_REPORT.md  CI_CD_README.md  COMPLIANCE_100_FINAL.md  COMPLIANCE_AUDIT_FINAL.md  DATABASE_RESET_LOG.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOY_MCP_CLONE_SKILL.md  DEPLOY_MCP_OPERATIONS.md  DEPLOY_MCP_SKILLS_README.md  DEPLOY_MCP_SYNC_SKILL.md  Dockerfile.agent-twin-mcp  Dockerfile.zilla-base  EXECUTE_ALL_3_STEPS.sh  EXECUTE_ALL_3_STEPS.ts  EXECUTION_SUMMARY.md  FASE4_PROFILE_BASED_PROMPTS.md  FINAL_STATUS.md  FINAL_SUMMARY.md  GATEWAY_QUICK_START.md  IMPLEMENTATION_STATUS.md  LOAD_TEST_REPORT.md  MCP-WORKING-SOLUTION.md  MCP_AUDIT_REPORT.md  MCP_BUILD_EXAMPLES.md  MCP_CONSOLIDATION_PLAN.md  MCP_CONSTRUCTION_GUIDE.md  MCP_CONVERSION_PATTERN.md  (+87 more)
.claude/: .mcp.json
ai-governance-mcp-server/: CHANGELOG.md  Dockerfile  OPERATIONS.md  README.md  ai_governance_mcp.py  docker-compose.yml  pyproject.toml
ai-governance-mcp-server/.github/workflows/: ai-governance-pr.yml
ai-governance-mcp-server/docs/decisions/: adr-0001-mcp-stack-choice.md  adr-0002-ecosystem-graph-networkx.md  adr-0003-suggestion-store-file-per-json.md  adr-0004-validator-regex-vs-llm.md  adr-0005-docker-distribution.md
ai-governance-mcp-server/knowledge-base/: AGENTS.md  README.md  backend.md  cicd-deploy.md  contracts.md  database.md  ecosystem.yaml  fallback.md  final-response-format.md  forbidden-actions.md  frontend.md  infrastructure.md  integrations.md  observability.md  security.md  testing.md
ai-governance-mcp-server/knowledge-base/audit/: decisions.jsonl
ai-governance-mcp-server/scripts/: __init__.py  install_hook.sh  pr_validate.py  precommit_validate.py  scan_ecosystem.py  smoke_test.py
ai-governance-mcp-server/src/: __init__.py
ai-governance-mcp-server/src/config/: __init__.py  settings.py
ai-governance-mcp-server/src/knowledge/: __init__.py  audit_store.py  ecosystem_graph.py  governance_repository.py  markdown_loader.py  suggestion_store.py
ai-governance-mcp-server/src/models/: __init__.py  graph.py  guideline.py  policy.py  suggestion.py  tool_response.py
ai-governance-mcp-server/src/server/: __init__.py  mcp_server.py
ai-governance-mcp-server/src/tools/: __init__.py  adr_tool.py  audit_tool.py  checklist_tool.py  decision_tool.py  graph_tool.py  guidelines_tool.py  migration_tool.py  ownership_tool.py  policy_tool.py  repository_tool.py  suggestion_tool.py
ai-governance-mcp-server/src/utils/: __init__.py  logger.py  validators.py
ai-governance-mcp-server/tests/: conftest.py  test_adr.py  test_audit.py  test_decision_validator.py  test_graph.py  test_guidelines.py  test_migration.py  test_ownership.py  test_policy.py  test_pr_validate.py  test_precommit_hook.py  test_scanner.py  test_search.py  test_suggestions.py
archzilla-mcp-server/: .mcp.json  Dockerfile  Dockerfile.new  README.md  archzilla_mcp.py  package-lock.json  package.json  pyproject.toml  run.sh  tsconfig.json
archzilla-mcp-server/src/: server.ts
archzilla-mcp-server/src/config/: settings.ts
archzilla-mcp-server/src/db/: store-postgres.ts.backup  store.ts
archzilla-mcp-server/src/prompts/: archzillaPrompt.ts  profilePrompts.ts
archzilla-mcp-server/src/server/: mcp_server.py
archzilla-mcp-server/src/tools/: archzilla_tools.py  index.ts
archzilla-mcp-server/tests/: smoke.test.ts
audit-mcp-server/: Dockerfile  audit_mcp.py  pyproject.toml
audit-mcp-server/src/checkers/: docs_checker.py  lint_checker.py  resolver.py  security_checker.py  structure_checker.py  test_checker.py
audit-mcp-server/src/config/: settings.py
audit-mcp-server/src/db/: postgres_sync.py  store.py
audit-mcp-server/src/knowledge/: github_client.py
audit-mcp-server/src/models/: criticality.py  policy.py
audit-mcp-server/src/policies/: dev.yaml  hml.yaml  prod.yaml
audit-mcp-server/src/server/: mcp_server.py
audit-mcp-server/src/tools/: approval_tool.py  audit_tool.py  checklist_tool.py  gate_tool.py  policy_tool.py  report_tool.py
audit-mcp-server/tests/: conftest.py  test_checkers.py  test_server_dispatch.py  test_store.py  test_tools.py
backzilla-mcp-server/: .mcp.json  Dockerfile  README.md  backzilla_mcp.py  package-lock.json  package.json  pyproject.toml
backzilla-mcp-server/src/: server.ts
backzilla-mcp-server/src/config/: settings.ts
backzilla-mcp-server/src/db/: store-postgres.ts  store-postgres.ts.backup  store.ts
backzilla-mcp-server/src/prompts/: backzillaPrompt.ts  index.ts  profilePrompts.ts  system_prompt.py
backzilla-mcp-server/src/server/: mcp_server.py
backzilla-mcp-server/src/tools/: backzilla_tools.py  index.ts
backzilla-mcp-server/tests/: smoke.test.ts
config-mcp-server/: Dockerfile  config_mcp.py  pyproject.toml
config-mcp-server/src/api/: router.py
config-mcp-server/tests/: conftest.py  test_store.py
deploy-mcp-server/: Dockerfile  deploy_mcp.py  pyproject.toml
deploy-mcp-server/tests/: conftest.py  test_deploy.py  test_git.py  test_pipeline.py  test_pr.py  test_server_dispatch.py  test_workflow.py
mcp-gateway/: Dockerfile  README.md  pyproject.toml  test_rate_limit_and_audit.py
mcp-gateway/src/: __init__.py  main.py
mcp-gateway/tests/: __init__.py  test_gateway.py
services-mcp-server/: Dockerfile  pyproject.toml  services_mcp.py
services-mcp-server/tests/: conftest.py  test_composite_tool.py  test_discovery_tool.py  test_portmap_tool.py  test_registry_tool.py  test_server_dispatch.py
services/analytics-mcp-server/: README.md  pyproject.toml
services/dai-mcp-server/: README.md  pyproject.toml
services/datalake-mcp-server/: README.md  pyproject.toml
services/monitor-mcp-server/: README.md  pyproject.toml
services/pipeline-mcp-server/: README.md  pyproject.toml
services/scheduler-mcp-server/: coverage.json  pyproject.toml
(+635 files in other folders)
