[project]
name = "archzilla-mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["mcp>=1.2.0,<2.0", "pydantic>=2.6.0,<3.0", "fastapi>=0.104.0", "uvicorn[standard]>=0.24.0"]

[project.scripts]
archzilla-mcp-server = "src.server.mcp_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."
