[project]
name = "audit-mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "dataforalltech platform team" }]
description = "Auditoria e compliance independente para microserviços da plataforma"
dependencies = [
    "mcp>=1.2.0,<2.0",
    "pydantic>=2.6.0,<3.0",
    "pydantic-settings>=2.2.0,<3.0",
    "httpx>=0.27.0,<1.0",
    "pyyaml>=6.0,<7.0",
    "psycopg2-binary>=2.9.0,<3.0",
    "fastapi>=0.104.0,<1.0",
    "uvicorn[standard]>=0.24.0,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0,<9.0", "pytest-asyncio>=0.23.0,<1.0", "pytest-mock>=3.14.0", "pytest-cov>=4.0.0,<5.0", "ruff>=0.4.0,<1.0"]

[project.scripts]
audit-mcp-server = "src.server.mcp_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
