[project]
name = "config-mcp-server"
version = "0.1.0"
description = "MCP Server centralizado de configurações, credenciais, ambientes, tenants e hardware."
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "dataforalltech platform team" }]
dependencies = [
    "mcp>=1.2.0,<2.0",
    "pydantic>=2.6.0,<3.0",
    "pydantic-settings>=2.2.0,<3.0",
    "cryptography>=42.0.0,<44.0",
    "fastapi>=0.111.0,<1.0",
    "uvicorn[standard]>=0.29.0,<1.0",
    "httpx>=0.27.0,<1.0",
    "psutil>=5.9.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "pytest-mock>=3.14.0,<4.0",
    "ruff>=0.4.0,<1.0",
]

[project.scripts]
config-mcp-server = "src.server.mcp_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
