[project]
name = "mcp-gateway"
version = "1.0.0"
description = "MCP Gateway — Central proxy for multi-tenant, multi-protocol MCP access"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.27.0,<1.0",
    "redis>=5.0.0,<6.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.6.0,<3.0",
    "bcrypt>=4.0.0",
]

[project.scripts]
mcp-gateway = "src.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."
