[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dai-mcp-server"
version = "0.1.0"
description = "MCP Server for DAI Orchestrator — exposes DAI agent as MCP for other agents to invoke"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
dai-mcp = "src.server.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=html --cov-fail-under=80"
