[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "platform-scheduler-mcp"
version = "1.0.0"
description = "Model Context Protocol server for platform-scheduler task management and scheduling"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "dataforalltech platform team", email = "platform@dataforall.tech" }]
dependencies = [
    "mcp>=1.2.0,<2.0",
    "pydantic>=2.6.0,<3.0",
    "pydantic-settings>=2.2.0,<3.0",
    "httpx>=0.25.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "pytest-cov>=4.1.0,<5.0",
    "ruff>=0.4.0,<1.0",
    "mypy>=1.8.0,<2.0",
    "black>=24.0.0,<25.0",
]

[project.scripts]
platform-scheduler-mcp = "src.server.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP", "S", "T20"]
ignore = ["E501", "T201", "S101", "S106"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
strict = true
disable_error_code = ["untyped-decorator"]

[tool.black]
line-length = 120
target-version = ["py312"]
